# RampUp

./: .env.example  .gitignore  Dockerfile  OnboardIQ.md  README.md  generate_sample_dataset.py  pyproject.toml  render.yaml  start_app.py
app/: alembic.ini  main.py
app/api/: routes.py
app/config/: settings.py
app/core/: database.py  orm.py
app/ingestion/: chunker.py  embedder.py  graph_client.py
app/migrations/: env.py
app/migrations/versions/: 9f2c8e7b43a6_add_unique_constraint_on_source_url_and_chunk_index.py  b05aa88c6447_initial_tables.py
app/query/: generator.py  retriever.py
frontend/: .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatView.tsx  GapsView.tsx  IngestView.tsx  Sidebar.tsx
