[project]
name = "rampup"
version = "0.1.0"
description = "AI-Powered New Hire Knowledge Accelerator - RampUp"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pypdf>=5.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
]


